k8s-deployment-proweb-inone-www-prd.yaml
# apiVersion: v1
# kind: PersistentVolume
# metadata:
#   name: proweb-inone-prd-www-nas
#   labels:
#     alicloud-pvname: proweb-inone-prd-www-nas
# spec:
#   storageClassName: nas
#   capacity:
#     storage: 100Gi
#   accessModes:
#     - ReadWriteMany
#   flexVolume:
#     driver: "alicloud/nas"
#     options:
#       server: "12d01749b8a-wuu43.cn-hongkong.nas.aliyuncs.com"
#       path: "/"
#       vers: "4.0"
# ---
# apiVersion: v1
# kind: PersistentVolumeClaim
# metadata:
#   name: proweb-inone-prd-www-nas-pvc
#   namespace: proweb-inone-prd-www-ns
# spec:
#   storageClassName: nas
#   accessModes:
#     - ReadWriteMany
#   resources:
#     requests:
#       storage: 100Gi
#   selector:
#     matchLabels:
#       alicloud-pvname: proweb-inone-prd-www-nas
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: proweb-inone-prd-www
  namespace: proweb-inone-prd-www-ns
  labels:
    app: proweb-inone-prd-www
    Environment: prd
    Owner: DigitalChannels
    ProjectName: inone
spec:
  replicas: 1
  strategy:
   type: RollingUpdate
   rollingUpdate:
     maxUnavailable: 0
  selector:
    matchLabels:
      app: proweb-inone-prd-www
  template:
    metadata:
      annotations:
        k8s.aliyun.com/eci-sls-enable: "true"
        k8s.aliyun.com/acr-service-arns: "acs:ram::5725926127090411:role/k8s-prd-acr-access"
      labels:
        app: proweb-inone-prd-www
    spec:
      containers:
      - name: proweb-inone-prd-www
        image: proweb-acr-registry-vpc.cn-hongkong.cr.aliyuncs.com/proweb-prd/proweb-inone-prd-www-acr-repo:latest
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "1024Mi"  # Initial memory request
            cpu: "256m"       # Initial CPU request
          limits:
            memory: "1024Mi"  # Maximum memory allowed
            cpu: "256m"       # Maximum CPU allowed
        volumeMounts:
        - name: proweb-inone-prd-www-oss-pvc
          mountPath: "/mnt/oss"
        # - name: proweb-inone-prd-nas-pvc
        #   mountPath: "/mnt/oss"
      volumes:
      - name: proweb-inone-prd-www-oss-pvc
        persistentVolumeClaim:
          claimName: proweb-inone-prd-www-oss-pvc
      # - name: proweb-inone-prd-nas-pvc
      #   persistentVolumeClaim:
      #     claimName: proweb-inone-prd-nas-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: proweb-inone-prd-www-service
  namespace: proweb-inone-prd-www-ns
  labels:
    app: proweb-inone-prd-www-service
spec:
  selector:
    app: proweb-inone-prd-www
  sessionAffinity: None
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: proweb-inone-prd-www-ingress
  namespace: proweb-inone-prd-www-ns
  labels:
    ingress: proweb-inone-prd-www-ingress
  annotations:
    alb.ingress.kubernetes.io/healthcheck-enabled: "true"
    alb.ingress.kubernetes.io/healthcheck-path: "/"
    alb.ingress.kubernetes.io/healthcheck-protocol: "HTTP"
    alb.ingress.kubernetes.io/healthcheck-httpversion: "HTTP1.1"
    alb.ingress.kubernetes.io/healthcheck-method: "HEAD"
    alb.ingress.kubernetes.io/healthcheck-code: "http_2xx,http_3xx"
    alb.ingress.kubernetes.io/healthcheck-httpcode: "http_2xx,http_3xx"
    alb.ingress.kubernetes.io/healthcheck-timeout-seconds: "5"
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: "30"
    alb.ingress.kubernetes.io/healthy-threshold-count: "3"
    alb.ingress.kubernetes.io/unhealthy-threshold-count: "3"
    alb.ingress.kubernetes.io/healthcheck-connect-port: "80"
spec:
  ingressClassName: k8s-alb-https
  rules:
    - host: www.inone.com.hk
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: proweb-inone-prd-www-service
              port:
                number: 80
  tls:
  - hosts: 
    - www.inone.com.hk
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-egress-any-any
  namespace: proweb-inone-prd-www-ns
spec:
  podSelector: {}
  policyTypes:
  - Egress
  egress:
    - {}
